# griode

./: .flake8  .gitignore  DESIGN.md  MANUAL.md  MODHOST_COMMANDS  README.md  arpeggiator.py  chords.py  clock.py  colors.py  control  crontab  download-soundfonts.sh  fluidsynth.py  gridgets.py  griode  griode.py  griode.service  griode.sh  init  keyboard.py  latch.py  launchpad.py  looper.py  mid2loop.py  mid2loop.sh  mixer.py  notes.py  palette.py  palette.yaml  persistence.py  pickers.py  process_output.pl  quantize.py  requirements.txt  scales.py  sequencer.py  setup  termpad.py
front-end/: Cargo.toml
front-end/src/: main.rs
frontend/: Cargo.toml  README.md  index.html  style.css
frontend/client/: Cargo.toml  Makefile.toml
frontend/client/src/: client.rs
frontend/example/: index.html
frontend/src/: client.rs  server.rs  shared.rs
hello-world/: Cargo.toml
hello-world/src/: main.rs
instruments/: extract_instruments_from_log
lv2/: README.md  build_db  build_db.pl  find_lv2  setup
songs/: Church_Bells  Example_A  Example_B  README.md  README.txt  Shark_Lips
songs/Pedals/: 1010ExamplePedal
soundfonts/: download-soundfonts.sh
state/: README.md
